--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-  <header class="bg-indigo-600 px-6 md:px-8 py-4 fixed w-full top-0 text-indigo-200 z-10">
+  <header id="navbar" class="bg-indigo-600 px-6 md:px-8 py-4 fixed w-full top-0 text-indigo-200 z-10">
     <div class="md:flex md:justify-between font-semibold">
       <div class="flex justify-between text-lg text-gray-50">
         <h1><a href="index.html">Curso practico de JavaScript</a></h1>
-        <div class="md:hidden">
+        <div id="menu" class="md:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </div>
       </div>
-      <nav class="mt-5 md:mt-0">
+      <nav id="navigation" class="max-h-0 overflow-hidden transition-all duration-300 md:max-h-full">
         <ul class="md:flex md:justify-between">
           <li class="mt-4 text-center md:text-left md:mt-0 md:mr-6 lg:mr-8">
             <a class="hover:underline text-gray-50" href="#geometricas">Figuras Geometricas</a>
@@ -121,6 +121,8 @@
       </div>
     </section>
   </main>
+
+  <script src="js/geometricFigures.js"></script>
 </body>
 
 </html>
