--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
                     </div>
                   </div>
                   <div>
-                    <label for="inputCirculo" class="block mb-1 text-sm"></label>
+                    <label for="inputCirculo" class="block mb-1 text-sm">Radio del circulo:</label>
                     <input id="inputCirculo" type="number">
                   </div>
                 </div>
